--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "4.x",
+    "@designable/formily-antd": "^1.0.0-beta.45",
     "@formily/antd": "^2.2.20",
     "@formily/core": "^2.2.20",
     "@formily/react": "^2.2.20",
@@ -17,6 +18,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
